snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha1
9d989b55f9a10e6677ca9bd1cb250362876297f0